--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@discordjs/rest": "^0.2.0-canary.0",
     "discord-api-types": "^0.26.1",
-    "discord.js": "^13.6.0"
-  }
+    "discord.js": "^13.6.0",
+    "node-fetch": "^3.1.0"
+  },
+  "type": "module"
 }
