--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@discordjs/rest": "^0.2.0-canary.0",
+    "anime-images-api": "^2.0.0",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0",
     "node-fetch": "^3.1.0"
