--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "anime-images-api": "^2.0.0",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0",
+    "express": "^4.17.2",
     "node-fetch": "^3.1.0"
   },
   "type": "module"
